--- a/src/View/JCadastrar.form
+++ b/src/View/JCadastrar.form
@@ -1,83 +1,143 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="View.Cadastrar">
-  <grid id="27dc6" binding="CadastrarPanel" layout-manager="GridLayoutManager" row-count="9" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="View.JCadastrar">
+  <grid id="27dc6" binding="CadastrarPanel" layout-manager="GridLayoutManager" row-count="12" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="10" left="30" bottom="40" right="50"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="541" height="466"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <component id="b672e" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <enabled value="false"/>
+          <font name="Roboto Light" size="20"/>
           <text value="Cadastrar Prudutos"/>
         </properties>
       </component>
       <component id="b1c6d" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Nome"/>
+          <font name="Roboto Light" size="14"/>
+          <text value="Nome do Produto"/>
         </properties>
       </component>
       <component id="b56af" class="javax.swing.JTextField" binding="nomeField">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="1" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="350" height="40"/>
+            <preferred-size width="350" height="40"/>
+            <maximum-size width="350" height="40"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <font name="Roboto Light" size="14"/>
+        </properties>
       </component>
       <component id="eaefd" class="javax.swing.JLabel">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Descrição"/>
+          <font name="Roboto Light" size="14"/>
+          <text value="Descrição do Produto"/>
         </properties>
       </component>
       <component id="5c65c" class="javax.swing.JTextField" binding="descricaoField">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="1" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="350" height="40"/>
+            <preferred-size width="350" height="40"/>
+            <maximum-size width="350" height="40"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <font name="Roboto Light" size="14"/>
+        </properties>
       </component>
       <component id="cb9db" class="javax.swing.JLabel">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Valor"/>
+          <font name="Roboto Light" size="14"/>
+          <text value="Valor do Produto"/>
         </properties>
-      </component>
-      <component id="203ba" class="javax.swing.JTextField" binding="precoField">
-        <constraints>
-          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
       </component>
       <component id="b208a" class="javax.swing.JLabel">
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Roboto Light" size="14"/>
           <text value="Disponível para venda?"/>
         </properties>
       </component>
-      <component id="d613f" class="javax.swing.JRadioButton" binding="disponivel">
+      <component id="c0bbe" class="javax.swing.JButton" binding="btnListar">
         <constraints>
-          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="10" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="30"/>
+            <preferred-size width="200" height="30"/>
+            <maximum-size width="200" height="30"/>
+          </grid>
         </constraints>
         <properties>
-          <text value="RadioButton"/>
+          <font name="Roboto Light" size="14"/>
+          <text value="Produtos Cadatrados"/>
+        </properties>
+      </component>
+      <component id="407b3" class="javax.swing.JButton" binding="btnAdicionar">
+        <constraints>
+          <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="150" height="30"/>
+            <preferred-size width="150" height="30"/>
+            <maximum-size width="150" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Roboto Light" size="14"/>
+          <text value="Adicionar"/>
+        </properties>
+      </component>
+      <component id="3b825" class="javax.swing.JFormattedTextField" binding="precoField">
+        <constraints>
+          <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="50" height="40"/>
+            <preferred-size width="50" height="40"/>
+            <maximum-size width="50" height="40"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Roboto Light" size="14"/>
+        </properties>
+      </component>
+      <component id="c5b84" class="javax.swing.JComboBox" binding="comboBox">
+        <constraints>
+          <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="50" height="40"/>
+            <preferred-size width="50" height="40"/>
+            <maximum-size width="50" height="40"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Roboto Light" size="14"/>
+        </properties>
+      </component>
+      <component id="16dfc" class="javax.swing.JButton" binding="fecharButton" default-binding="true">
+        <constraints>
+          <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="30"/>
+            <preferred-size width="200" height="30"/>
+            <maximum-size width="200" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Fechar"/>
         </properties>
       </component>
     </children>
